# sgstatus

./: Cargo.toml  README.md
protocols/: notification-item.xml  notification-watcher.xml
src/: main.rs  network.rs  network_manager.rs  power.rs  sni_item.rs  sni_watcher.rs  status.rs  upower.rs  volume.rs
